Position fixed to avoid bg jump on phone on scroll

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
+    position: fixed;
+    z-index: -1;
     margin: 0;
     height: 100vh; 
     overflow-x: hidden;   
